--- a/app/src/main/res/layout/item_today_selection.xml
+++ b/app/src/main/res/layout/item_today_selection.xml
@@ -110,9 +110,8 @@
                     android:id="@+id/animeImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:contentDescription="img"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/ic_launcher_foreground" />
+                    android:contentDescription="@string/img"
+                    android:scaleType="centerCrop" />
 
                 <ImageView
                     android:layout_width="30dp"
